# retrodex

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.codex/skills/retrodex-editor/: SKILL.md
.codex/skills/retrodex-editor/agents/: openai.yaml
apps/api/: package.json  tsconfig.json
apps/api/src/: backend.test.ts  errors.ts  jobs.ts  json.ts  openapi.ts  paths.ts  python-worker.ts  run-repository.ts  server.ts  smoke-test.ts
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.test.ts  index.ts
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.tsx  gifenc.d.ts  main.tsx  styles.css
apps/web/src/components/editor/: editor-components.tsx
apps/web/src/components/ui/: badge.tsx  (+5 more)
apps/web/src/editor/: api.ts  color.ts  constants.ts  grid.ts  hit-testing.ts  masks.ts  types.ts  use-editor-state.ts
apps/web/src/styles/: canvas-stage.css  color.css  export.css  masks.css  panels.css  reference.css  timeline.css  toolbar.css
docs/: agent-playbook.md  backend.md  contracts.md  tooling-sources.md
docs/assets/: retrodex-codex-morph.webm
python/pixel_character_core/: __init__.py  backdrop.py  editor_pixels.py  exporter.py  ingest.py  worker.py
python/pixel_character_core/contracts/: __init__.py  models.py
python/pixel_character_core/legacy/: sprite_forge.py
python/pixel_character_core/pipeline/: __init__.py  steps.py
python/pixel_character_core/presets/: __init__.py  deterministic.py
python/tests/: test_backdrop.py  test_ingest.py  test_worker.py
(+4 files in other folders)
